--- a/assets/main.css
+++ b/assets/main.css
@@ -4,7 +4,7 @@ body, h1, h2, h3, h4, h5, h6, p {
 }
 
 body {
-  font: 400 16px/1.5 'Roboto', sans-serif;
+  font: 400 16px/1.5 'Merriweather', serif;
   color: #111;
   background-color: #FFFFFF;
   -webkit-text-size-adjust: 100%;
@@ -12,7 +12,9 @@ body {
   -moz-font-feature-settings: "kern" 1;
   -o-font-feature-settings: "kern" 1;
   font-feature-settings: "kern" 1;
-  font-kerning: normal; 
+  font-kerning: normal;
+  width: 100%;
+  min-height: 100%; 
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -20,17 +22,16 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 a {
-  color: #2a7ae2;
   text-decoration: none; 
 }
-a:visited {
-  color: #1756a9; 
-}
+
 a:hover {
   color: #111;
   text-decoration: none;
-  cursor: default; 
+  cursor: pointer; 
 }
+
+/* Header */
 
 .header {
   border-top: 1px solid #383838;
@@ -47,9 +48,87 @@ a:hover {
   line-height: 54px;
   letter-spacing: -1px;
   margin-bottom: 0;
+  padding-right: 20px;
+  padding-left: 20px;
   float: left; 
+}
+
+.page-title:hover {
+  background: #FCFBFB;
 }
 
 .page-title, .page-title:visited {
   color: #634646; 
+}
+
+.navbar {
+  overflow: hidden;
+}
+
+.navbar a {
+  float: left;
+  display: block;
+  color: #746262;
+  text-align: center;
+  padding: 16px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar a:hover {
+  background-color: #F3F3F3;
+  color: #635555;
+}
+
+.navbar .icon {
+  display: none;
+}
+
+.content {
+  height: 80%;
+}
+
+.footer {
+  border-top: solid 1px #B3B3B3;
+  position: fixed;
+  left: 0px;
+  bottom: 0px;
+  height: 40px;
+  width: 100%;
+  text-align: center;
+  padding-top: 10px;
+}
+
+.icon {
+  text-indent: -1000vw;
+  display: inline-block;
+  vertical-align: middle;
+  padding: 0;
+  border: 0;
+  margin: 0;
+  width: 3em;
+  height: 2em;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+footer .icon {
+  width: 2em;
+  height: 2em;
+}
+
+.icon-npmjs {
+  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' id='Layer_1' x='0px' y='0px' viewBox='0 0 278.3 123.7' enable-background='new 0 0 278.3 123.7' xml:space='preserve'><g>	<path fill='#191717' d='M92.8,15.5v92.8H0V15.5H92.8z M15.5,30.9v61.9h30.9V46.4h15.5v46.4h15.5V30.9H15.5z'/>	<path fill='#191717' d='M170.1,15.5v92.8h-30.9v15.5H77.3V15.5H170.1z M92.8,30.9v77.3h30.9V92.8h30.9V30.9H92.8z M123.7,46.4h15.5   v30.9h-15.5V46.4z'/>	<path fill='#191717' d='M154.6,108.2V15.5h123.7v92.8H154.6z M170.1,30.9v61.9H201V46.4h15.5v46.4H232V46.4h15.5v46.4h15.5V30.9   H170.1z'/></g></svg>");
+}
+.icon-github {
+  background-image: url("data:image/svg+xml;utf8,<?xml version='1.0' encoding='UTF-8'?><svg xmlns='http://www.w3.org/2000/svg' id='Layer_1' viewBox='0 0 47.999998 48.000002' width='48' height='48'><style id='style3'>.Round_x0020_Corners_x0020_2_x0020_pt{fill:#FFF;stroke:#000;stroke-miterlimit:10}.Live_x0020_Reflect_x0020_X{fill:none}.Bevel_x0020_Soft{fill:url(#SVGID_1_)}.Dusk{fill:#FFF}.Foliage_GS{fill:#FD0}.Pompadour_GS{fill:#44ade2}.Pompadour_GS,.st0{fill-rule:evenodd;clip-rule:evenodd}.st0{fill:#191717}</style><linearGradient id='SVGID_1_' gradientUnits='userSpaceOnUse' x1='-216.625' y1='-385.75' x2='-215.918' y2='-385.043'><stop offset='0' id='stop6' stop-color='#dedfe3'/><stop offset='.174' id='stop8' stop-color='#d8d9dd'/><stop offset='.352' id='stop10' stop-color='#c9cacd'/><stop offset='.532' id='stop12' stop-color='#b4b5b8'/><stop offset='.714' id='stop14' stop-color='#989a9c'/><stop offset='.895' id='stop16' stop-color='#797c7e'/><stop offset='1' id='stop18' stop-color='#656b6c'/></linearGradient><path class='st0' d='M23.928 1.15C11 1.15.514 11.638.514 24.566c0 10.343 6.75 19.105 15.945 22.265 1.148.144 1.58-.574 1.58-1.15v-4.02c-6.465 1.436-7.902-3.16-7.902-3.16-1.005-2.73-2.586-3.45-2.586-3.45-2.154-1.435.144-1.435.144-1.435 2.298.144 3.59 2.442 3.59 2.442 2.156 3.59 5.46 2.586 6.753 2.01.142-1.58.86-2.585 1.435-3.16-5.17-.574-10.63-2.585-10.63-11.635 0-2.585.862-4.596 2.442-6.32-.287-.575-1.005-3.017.288-6.177 0 0 2.01-.574 6.464 2.442 1.866-.574 3.877-.718 5.888-.718 2.01 0 4.022.286 5.89.717 4.453-3.016 6.464-2.442 6.464-2.442 1.293 3.16.43 5.602.287 6.177a9.29 9.29 0 0 1 2.44 6.32c0 9.05-5.458 10.918-10.63 11.492.863.718 1.58 2.155 1.58 4.31v6.464c0 .574.432 1.292 1.58 1.15 9.338-3.16 15.946-11.924 15.946-22.266-.143-12.785-10.63-23.27-23.558-23.27z' id='path20' clip-rule='evenodd' fill='#191717' fill-rule='evenodd'/></svg>");
+}
+
+.icon-mail {
+  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='114' height='114'><path stroke='#000' stroke-width='7' fill='none' d='m7,20h98v72H7zl44,44q5,4 10,0l44-44M7,92l36-36m26,0 36,36'/></svg>");
+}
+
+.icon-vitae {
+  background-image: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 1000 1000' enable-background='new 0 0 1000 1000' xml:space='preserve'><g><g transform='translate(0.000000,511.000000) scale(0.100000,-0.100000)'><path d='M1978.4,4967.3c-445-128.1-802.4-530.5-865.4-980c-29.2-213.5-29.2-7541,0-7754.5c49.5-346.2,307.9-717,618.1-881.1c283.2-148.3,112.4-141.6,3270.4-141.6c2535.4,0,2874.8,4.5,2998.4,36c395.6,101.1,712.5,406.8,863.1,833.9c33.7,98.9,38.2,375.4,42.7,3333.3c6.7,3050.1,4.5,3229.9-31.5,3297.4c-33.7,58.4-1706,1688-2229.7,2171.3L6505.3,5010l-2196-2.3C2299.8,5007.7,2102.1,5003.3,1978.4,4967.3z M6103,3937.8c0-577.6,24.7-739.5,137.1-971c94.4-188.8,323.7-422.6,508-517c249.5-125.9,337.2-137.1,989-137.1h591.2V-694.6c0-3337.8,9-3119.8-150.6-3306.4c-42.7-51.7-130.4-121.4-195.5-155.1l-114.6-60.7l-2818.6-6.7c-2450-4.5-2836.6,0-2935.5,29.2c-148.4,42.7-303.4,177.6-379.9,330.4L1675-3747V110v3857.1l58.4,116.9c71.9,143.9,231.5,287.7,366.4,328.2c85.4,27,440.6,33.7,2054.4,33.7l1948.8,2.2V3937.8z'/><path d='M3372,3764.8c-123.6-58.4-283.2-200-334.9-301.2c-56.2-110.1-83.2-265.2-60.7-359.6c15.7-74.2,11.2-92.2-27-114.6c-36-24.7-40.5-45-29.2-121.4c9-51.7,42.7-155.1,78.7-229.3c36-74.2,80.9-175.3,96.7-222.5c15.7-47.2,67.4-130.4,114.6-184.3c110.1-123.6,240.5-175.3,418.1-161.8c218,15.7,366.4,141.6,433.8,366.4c15.7,49.5,53.9,114.6,87.7,146.1c71.9,69.7,132.6,296.7,94.4,355.1c-11.2,22.5-18,125.9-11.2,242.8c11.2,233.8-24.7,348.4-128.1,400.1c-31.5,18-83.2,58.4-114.6,92.2C3853,3823.2,3581,3863.7,3372,3764.8z'/><path d='M2909,1957.6c-116.9-58.4-258.5-125.9-314.7-150.6c-107.9-51.7-188.8-152.8-220.3-278.7c-11.2-45-29.2-200-36-343.9l-15.7-265.2h1263.2h1263.2l-9,298.9c-6.7,267.5-13.5,312.4-65.2,411.3c-62.9,123.6-92.2,139.4-721.5,431.5c-9,4.5-74.2-175.3-143.9-397.8c-71.9-224.8-137.1-406.8-143.8-406.8s-36,60.7-60.7,132.6l-47.2,132.6l53.9,107.9c65.2,130.4,67.4,152.8,9,211.3c-85.4,85.4-292.2,36-292.2-71.9c0-24.7,22.5-89.9,49.5-143.9c47.2-96.6,47.2-98.9,6.7-233.8c-22.5-76.4-47.2-141.6-56.2-146.1c-9-4.5-33.7,49.5-53.9,119.1c-148.3,481-222.5,701.3-236,699C3131.5,2063.3,3028.1,2016.1,2909,1957.6z'/><path d='M2542.6,379.7c-137.1-42.7-231.5-188.8-206.8-323.7c20.2-105.6,141.6-209,265.2-227c53.9-6.7,1180-11.2,2501.7-6.7c2679.2,6.7,2503.9-4.5,2582.6,161.8c44.9,96.7,44.9,155.1,0,251.7c-78.7,166.3,103.4,155.1-2627.6,159.6C3709.2,397.7,2578.6,391,2542.6,379.7z'/><path d='M2493.2-786.8c-74.2-33.7-101.1-62.9-132.6-143.8c-47.2-125.9-20.2-231.5,80.9-319.2l69.7-56.2h2506.2c2321.9,0,2510.7,2.2,2571.3,38.2c69.7,40.5,132.6,150.6,132.6,231.5c0,76.4-65.2,195.5-130.4,240.5c-58.5,38.2-191.1,40.4-2533.1,45C2677.5-744.1,2580.8-746.3,2493.2-786.8z'/><path d='M2490.9-1926.4c-184.3-89.9-209-334.9-49.4-469.8l69.7-56.2h2515.2h2515.2l80.9,74.2c146.1,132.6,114.6,361.9-58.4,447.3c-74.2,38.2-240.5,40.5-2539.9,40.5C2828.1-1890.4,2556.1-1894.9,2490.9-1926.4z'/><path d='M2461.7-3077.2c-166.3-80.9-197.8-292.2-67.4-438.3l62.9-71.9l1463.3-6.7l1463.3-4.5l80.9,74.2c152.9,139.4,114.7,377.6-69.7,456.3c-65.2,27-307.9,31.5-1465.5,31.5C2652.7-3036.7,2533.6-3039,2461.7-3077.2z'/></g></g></svg>");
 }
